add_executable(ivfix
  IfBuilder.cpp
  IfCondenser.cpp
  IfFlattener.cpp
  IfHolder.cpp
  IfReplacer.cpp  
  IfShape.cpp      
  IfSorter.cpp    
  IfTypes.cpp   
  ivfix.cpp
  IfCollector.cpp  
  IfFixer.cpp      
  IfHasher.cpp     
  IfMerger.cpp  
  IfReporter.cpp  
  IfShapeList.cpp  
  IfStripper.cpp  
  IfWeeder.cpp
)
target_link_libraries(ivfix Coin::Coin)
