## Process this file with automake to generate Makefile.in.

bin_PROGRAMS = ivfix

ivfix_SOURCES = \
        IfAssert.h \
        IfBuilder.cpp IfBuilder.h \
        IfCollector.cpp IfCollector.h \
        IfCondenser.cpp IfCondenser.h \
        IfFixer.cpp IfFixer.h \
        IfFlattener.cpp IfFlattener.h \
        IfHasher.cpp IfHasher.h \
        IfHolder.cpp IfHolder.h \
        IfMerger.cpp IfMerger.h \
        IfReplacer.cpp IfReplacer.h \
        IfReporter.cpp IfReporter.h \
        IfShape.cpp IfShape.h \
        IfShapeList.cpp IfShapeList.h \
        IfSorter.cpp IfSorter.h \
        IfStripper.cpp IfStripper.h \
        IfTypes.cpp IfTypes.h \
        IfWeeder.cpp IfWeeder.h \
        ivfix.cpp


man_MANS = ivfix.1
EXTRA_DIST = $(man_MANS)
